[gd_scene load_steps=12 format=3 uid="uid://bcatx7a85rd1m"]

[ext_resource type="Script" path="res://HUD/hud.gd" id="1_dh0fi"]
[ext_resource type="PackedScene" uid="uid://c63mndp5wwhtp" path="res://models/UI/hud_basics.glb" id="2_r88tk"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_xjysx"]

[sub_resource type="ArrayMesh" id="ArrayMesh_035t3"]
_surfaces = [{
"aabb": AABB(-0.932079, 0.036984, -0.924997, 1.83376, 9.99868e-06, 0.161866),
"format": 34896613377,
"index_count": 9,
"index_data": PackedByteArray(2, 0, 0, 0, 3, 0, 0, 0, 4, 0, 1, 0, 0, 0, 2, 0, 4, 0),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 5,
"vertex_data": PackedByteArray(86, 22, 0, 0, 250, 255, 0, 0, 255, 255, 0, 0, 250, 255, 0, 0, 121, 247, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 84, 1, 0, 0, 255, 255, 0, 0, 27, 96, 0, 0)
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_t20pi"]
resource_name = "hud_basics_Plane_001"
_surfaces = [{
"aabb": AABB(-0.932079, 0.036984, -0.924997, 1.83376, 9.99868e-06, 0.161866),
"attribute_data": PackedByteArray(50, 29, 163, 199, 175, 247, 163, 199, 184, 239, 91, 56, 79, 8, 216, 57, 175, 247, 38, 110),
"format": 34896613399,
"index_count": 9,
"index_data": PackedByteArray(2, 0, 0, 0, 3, 0, 0, 0, 4, 0, 1, 0, 0, 0, 2, 0, 4, 0),
"material": SubResource("StandardMaterial3D_xjysx"),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 5,
"vertex_data": PackedByteArray(86, 22, 0, 0, 250, 255, 255, 191, 255, 255, 0, 0, 250, 255, 255, 191, 121, 247, 0, 0, 0, 0, 255, 191, 0, 0, 0, 0, 84, 1, 255, 191, 255, 255, 0, 0, 27, 96, 255, 191, 239, 255, 7, 128, 255, 255, 255, 127, 254, 255, 255, 127, 239, 255, 7, 128, 255, 255, 255, 127)
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_035t3")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0d2sx"]
albedo_color = Color(0.345098, 1, 1, 1)
emission_enabled = true
emission = Color(0.345098, 1, 1, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_g12sm"]
albedo_color = Color(0.509804, 0.00392157, 0.898039, 1)
emission_enabled = true
emission = Color(0.514956, 0.00335702, 0.904583, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_rw0ew"]

[sub_resource type="ArrayMesh" id="ArrayMesh_4snqh"]
_surfaces = [{
"aabb": AABB(-0.793366, 0, -0.642364, 1.79337, 0.0530452, 0.29643),
"format": 34896613377,
"index_count": 72,
"index_data": PackedByteArray(15, 0, 7, 0, 6, 0, 15, 0, 14, 0, 7, 0, 13, 0, 2, 0, 12, 0, 13, 0, 0, 0, 2, 0, 15, 0, 0, 0, 13, 0, 15, 0, 10, 0, 0, 0, 7, 0, 1, 0, 6, 0, 7, 0, 3, 0, 1, 0, 14, 0, 3, 0, 7, 0, 14, 0, 11, 0, 3, 0, 12, 0, 11, 0, 14, 0, 12, 0, 2, 0, 11, 0, 6, 0, 10, 0, 15, 0, 6, 0, 1, 0, 10, 0, 5, 0, 9, 0, 8, 0, 5, 0, 4, 0, 9, 0, 5, 0, 12, 0, 4, 0, 5, 0, 13, 0, 12, 0, 4, 0, 14, 0, 9, 0, 4, 0, 12, 0, 14, 0, 8, 0, 13, 0, 5, 0, 8, 0, 15, 0, 13, 0, 9, 0, 15, 0, 8, 0, 9, 0, 14, 0, 15, 0),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 16,
"vertex_data": PackedByteArray(0, 0, 0, 0, 252, 255, 0, 0, 255, 255, 0, 0, 252, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 44, 10, 65, 32, 138, 61, 0, 0, 44, 10, 65, 32, 113, 194, 0, 0, 132, 249, 255, 255, 204, 216, 0, 0, 132, 249, 255, 255, 48, 39, 0, 0, 243, 198, 65, 32, 113, 194, 0, 0, 243, 198, 65, 32, 138, 61, 0, 0, 159, 206, 0, 0, 252, 255, 0, 0, 159, 206, 0, 0, 0, 0, 0, 0, 122, 6, 255, 255, 48, 39, 0, 0, 122, 6, 255, 255, 204, 216, 0, 0, 164, 202, 255, 255, 48, 39, 0, 0, 164, 202, 255, 255, 204, 216, 0, 0)
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_y2py0"]
resource_name = "hud_basics_Plane_002"
_surfaces = [{
"aabb": AABB(-0.793366, 0, -0.642364, 1.79337, 0.0530452, 0.29643),
"attribute_data": PackedByteArray(0, 0, 255, 255, 0, 0, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 0, 0, 0, 0, 0, 0, 0, 0, 255, 255, 0, 0, 255, 255, 0, 0, 44, 10, 139, 61, 44, 10, 139, 61, 44, 10, 139, 61, 44, 10, 115, 194, 44, 10, 115, 194, 44, 10, 115, 194, 132, 249, 206, 216, 132, 249, 206, 216, 132, 249, 206, 216, 132, 249, 48, 39, 132, 249, 48, 39, 132, 249, 48, 39, 243, 198, 115, 194, 243, 198, 115, 194, 243, 198, 115, 194, 243, 198, 139, 61, 243, 198, 139, 61, 243, 198, 139, 61, 159, 206, 255, 255, 159, 206, 255, 255, 159, 206, 0, 0, 159, 206, 0, 0, 122, 6, 48, 39, 122, 6, 48, 39, 122, 6, 48, 39, 122, 6, 48, 39, 122, 6, 206, 216, 122, 6, 206, 216, 122, 6, 206, 216, 122, 6, 206, 216, 164, 202, 48, 39, 164, 202, 48, 39, 164, 202, 48, 39, 164, 202, 48, 39, 164, 202, 48, 39, 164, 202, 206, 216, 164, 202, 206, 216, 164, 202, 206, 216, 164, 202, 206, 216, 164, 202, 206, 216),
"format": 34896613399,
"index_count": 72,
"index_data": PackedByteArray(47, 0, 18, 0, 15, 0, 47, 0, 42, 0, 18, 0, 34, 0, 4, 0, 30, 0, 34, 0, 0, 0, 4, 0, 46, 0, 1, 0, 36, 0, 46, 0, 27, 0, 1, 0, 19, 0, 3, 0, 16, 0, 19, 0, 7, 0, 3, 0, 40, 0, 6, 0, 17, 0, 40, 0, 28, 0, 6, 0, 32, 0, 29, 0, 41, 0, 32, 0, 5, 0, 29, 0, 14, 0, 26, 0, 45, 0, 14, 0, 2, 0, 26, 0, 12, 0, 25, 0, 22, 0, 12, 0, 9, 0, 25, 0, 13, 0, 33, 0, 10, 0, 13, 0, 37, 0, 33, 0, 8, 0, 39, 0, 24, 0, 8, 0, 31, 0, 39, 0, 21, 0, 35, 0, 11, 0, 21, 0, 44, 0, 35, 0, 23, 0, 43, 0, 20, 0, 23, 0, 38, 0, 43, 0),
"material": SubResource("StandardMaterial3D_rw0ew"),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 48,
"vertex_data": PackedByteArray(0, 0, 0, 0, 252, 255, 41, 199, 0, 0, 0, 0, 252, 255, 212, 156, 255, 255, 0, 0, 252, 255, 212, 156, 255, 255, 0, 0, 252, 255, 41, 199, 0, 0, 0, 0, 0, 0, 41, 199, 0, 0, 0, 0, 0, 0, 42, 227, 255, 255, 0, 0, 0, 0, 42, 227, 255, 255, 0, 0, 0, 0, 41, 199, 44, 10, 65, 32, 138, 61, 190, 148, 44, 10, 65, 32, 138, 61, 255, 191, 44, 10, 65, 32, 138, 61, 142, 202, 44, 10, 65, 32, 113, 194, 63, 235, 44, 10, 65, 32, 113, 194, 255, 191, 44, 10, 65, 32, 113, 194, 142, 202, 132, 249, 255, 255, 204, 216, 212, 156, 132, 249, 255, 255, 204, 216, 255, 191, 132, 249, 255, 255, 204, 216, 41, 199, 132, 249, 255, 255, 48, 39, 42, 227, 132, 249, 255, 255, 48, 39, 255, 191, 132, 249, 255, 255, 48, 39, 41, 199, 243, 198, 65, 32, 113, 194, 142, 202, 243, 198, 65, 32, 113, 194, 63, 235, 243, 198, 65, 32, 113, 194, 255, 191, 243, 198, 65, 32, 138, 61, 142, 202, 243, 198, 65, 32, 138, 61, 190, 148, 243, 198, 65, 32, 138, 61, 255, 191, 159, 206, 0, 0, 252, 255, 212, 156, 159, 206, 0, 0, 252, 255, 212, 156, 159, 206, 0, 0, 0, 0, 42, 227, 159, 206, 0, 0, 0, 0, 42, 227, 122, 6, 255, 255, 48, 39, 41, 199, 122, 6, 255, 255, 48, 39, 190, 148, 122, 6, 255, 255, 48, 39, 42, 227, 122, 6, 255, 255, 48, 39, 142, 202, 122, 6, 255, 255, 204, 216, 41, 199, 122, 6, 255, 255, 204, 216, 63, 235, 122, 6, 255, 255, 204, 216, 212, 156, 122, 6, 255, 255, 204, 216, 142, 202, 164, 202, 255, 255, 48, 39, 142, 202, 164, 202, 255, 255, 48, 39, 190, 148, 164, 202, 255, 255, 48, 39, 42, 227, 164, 202, 255, 255, 48, 39, 42, 227, 164, 202, 255, 255, 48, 39, 255, 191, 164, 202, 255, 255, 204, 216, 142, 202, 164, 202, 255, 255, 204, 216, 63, 235, 164, 202, 255, 255, 204, 216, 212, 156, 164, 202, 255, 255, 204, 216, 212, 156, 164, 202, 255, 255, 204, 216, 255, 191, 79, 225, 93, 189, 255, 255, 255, 127, 255, 255, 255, 127, 160, 194, 80, 97, 79, 225, 93, 189, 255, 255, 255, 127, 255, 255, 255, 127, 160, 194, 80, 97, 255, 255, 255, 127, 255, 255, 255, 127, 224, 186, 112, 93, 255, 255, 255, 127, 255, 255, 255, 127, 224, 186, 112, 93, 255, 255, 255, 127, 255, 255, 255, 127, 160, 194, 80, 97, 255, 255, 255, 127, 255, 255, 255, 127, 160, 194, 80, 97, 111, 221, 30, 197, 255, 255, 255, 127, 255, 255, 255, 127, 111, 221, 30, 197, 254, 255, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 79, 225, 93, 189, 255, 255, 255, 127, 255, 255, 255, 127, 224, 186, 112, 93, 79, 225, 93, 189, 255, 255, 255, 127, 255, 255, 255, 127, 224, 186, 112, 93, 111, 221, 30, 197, 254, 255, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 111, 221, 30, 197, 255, 255, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127)
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_4snqh")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_dvcqt"]

[node name="HUD" type="Node3D"]
script = ExtResource("1_dh0fi")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]

[node name="hud_basics" parent="MeshInstance3D" instance=ExtResource("2_r88tk")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)

[node name="EnergyBar" parent="MeshInstance3D/hud_basics" index="1"]
visible = false

[node name="EnergyBarBlue" type="MeshInstance3D" parent="MeshInstance3D/hud_basics"]
mesh = SubResource("ArrayMesh_t20pi")
skeleton = NodePath("")
surface_material_override/0 = SubResource("StandardMaterial3D_0d2sx")

[node name="EnergyBarViolet" type="MeshInstance3D" parent="MeshInstance3D/hud_basics"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00218284, 0, 0.00233365)
mesh = SubResource("ArrayMesh_t20pi")
skeleton = NodePath("")
surface_material_override/0 = SubResource("StandardMaterial3D_g12sm")

[node name="BonusFrameWard" type="MeshInstance3D" parent="MeshInstance3D/hud_basics"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00392729, 0, -0.0286898)
mesh = SubResource("ArrayMesh_y2py0")
skeleton = NodePath("")
surface_material_override/0 = SubResource("StandardMaterial3D_dvcqt")

[node name="BonusFrameTeleport" type="MeshInstance3D" parent="MeshInstance3D/hud_basics"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00392729, 0, -0.0286898)
mesh = SubResource("ArrayMesh_y2py0")
skeleton = NodePath("")

[node name="BonusDot" parent="MeshInstance3D/hud_basics" index="7"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.508207, 0, -0.0794862)

[editable path="MeshInstance3D/hud_basics"]
